src/objects/Healthcare_Provider__c.object
<CustomObject>
    <fields>
        <fullName>AreaCode__c</fullName>
        <formula>Contact__r.AreaCodePhone__c</formula>
        <label>Area Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AreaRegion__c</fullName>
        <formula>TEXT(Contact__r.Region__c)</formula>
        <label>Area Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Healthcare Providers</relationshipLabel>
        <relationshipName>Healthcare_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Other_Healthcare_Providers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City_Of_Primary_Treater__c</fullName>
        <formula>Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City Of Primary Treater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact</description>
        <inlineHelpText>Healthcare Provider</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Other_Healthcare_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Previous, but inactive treaters on the case</description>
        <inlineHelpText>Designate a Healthcare Provider as inactive when the Employee is no longer treating with them</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <formula>Contact__r.MailingStreet &amp;&quot; &quot;&amp;Contact__r.MailingCity&amp;&quot; &quot;&amp;Contact__r.MailingState&amp;&quot; &quot;&amp;Contact__r.MailingPostalCode&amp;&quot; &quot;&amp;Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primary</description>
        <inlineHelpText>Only one physician can be designated as Primary Health Care Provider.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProviderStatus__c</fullName>
        <label>Provider Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Bakersfield Area</fullName>
                </value>
                <value>
                    <fullName>Fresno North &amp; South</fullName>
                </value>
                <value>
                    <fullName>Imperial County</fullName>
                </value>
                <value>
                    <fullName>Inland Empire-Central</fullName>
                </value>
                <value>
                    <fullName>Inland Empire-South</fullName>
                </value>
                <value>
                    <fullName>LA Central</fullName>
                </value>
                <value>
                    <fullName>LA Southbay</fullName>
                </value>
                <value>
                    <fullName>LA Southeast</fullName>
                </value>
                <value>
                    <fullName>LA Valley</fullName>
                </value>
                <value>
                    <fullName>Long Beach/Pasadena</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Oakland/East Bay</fullName>
                </value>
                <value>
                    <fullName>OC North</fullName>
                </value>
                <value>
                    <fullName>OC South</fullName>
                </value>
                <value>
                    <fullName>Sacto Central</fullName>
                </value>
                <value>
                    <fullName>Sacto North</fullName>
                </value>
                <value>
                    <fullName>SanGabriel Valley</fullName>
                </value>
                <value>
                    <fullName>San Jose &amp; South</fullName>
                </value>
                <value>
                    <fullName>Santa Barbara+North</fullName>
                </value>
                <value>
                    <fullName>SD Area North</fullName>
                </value>
                <value>
                    <fullName>SD Area South</fullName>
                </value>
                <value>
                    <fullName>SF Central &amp; North</fullName>
                </value>
                <value>
                    <fullName>SF South</fullName>
                </value>
                <value>
                    <fullName>Ventura/Oxnard Area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <description>Specialty</description>
        <inlineHelpText>Specialty of healthcare provider</inlineHelpText>
        <label>Specialty</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Healthcare Provider</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HP-{000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Healthcare Providers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OneActivePrimaryProviderAllowed</fullName>
        <active>true</active>
        <description>This validation rules enforces that only one Active Primary provider can be associated to a Case.</description>
        <errorConditionFormula>Case__r.PrimaryProvidersNumber__c  &gt; 1 ||
(Case__r.PrimaryProvidersNumber__c == 1 &amp;&amp; 
((IsChanged(ProviderStatus__c) &amp;&amp; TEXT(ProviderStatus__c) = &quot;Active&quot; &amp;&amp; Primary__c==true)  ||
(IsChanged(Primary__c) &amp;&amp; TEXT(ProviderStatus__c) = &quot;Active&quot; &amp;&amp; Primary__c==true))) ||
(ISNEW() &amp;&amp; 
Case__r.PrimaryProvidersNumber__c == 1 &amp;&amp;
TEXT(ProviderStatus__c) = &quot;Active&quot; &amp;&amp; Primary__c==true)</errorConditionFormula>
        <errorMessage>This case already has an Active Primary Provider associated to it, please correct the data and try again or contact your System Administrator.</errorMessage>
    </validationRules>
</CustomObject>